--- a/A/Altice/Altice_January2020/ads/OPT_1P_FIBER_39/160x600/160x600.html
+++ b/A/Altice/Altice_January2020/ads/OPT_1P_FIBER_39/160x600/160x600.html
@@ -80,13 +80,13 @@ amo.registerClick("clickUrl","https://www.altice.com");
 amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-01/BDY_300x200.mp4");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame03.png");
+amo.registerAttribute("frameImage3","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame03.png");
+amo.registerAttribute("frameImage4","IMAGE","1x1.png");
 amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_1P_39_1yr_300Mbps_Img_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","&nbsp;");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 56px;left:14px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'><div style='font-size: 75%;color: #0084d6;'>Limited Time Deal!</div></div></div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top: 74px;left: 14px;line-height:1.1;'><div style='font-size: 22px;letter-spacing:-0.1px;'>400 Mbps Internet</div><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>39<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div></div>");
-amo.registerAttribute("frameText23", "TEXT", "<div style='top: 174px;left: 14px;font-size:16px;letter-spacing:-0.1px;'>mo./3 years<div class='AlticeRegular' style='font-size:10px;margin-top: -2px;'>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 174px;left: 14px;font-size:16px;letter-spacing:-0.1px;'>mo./1 yr.<div class='AlticeRegular' style='font-size:10px;margin-top: -2px;'>plus taxes, fees &amp; charges</div></div>");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 57px;left: 15px;line-height: 1;font-size: 16px; letter-spacing:-0.1px;'><div style='color: #0084d6;font-size: 24px;'>2x the<br>speed of<br>Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup> for<br><div style='color:#000;'>$10 less/mo.</div></div></div>");
 amo.registerAttribute("frameText32","TEXT","<div class='AlticeRegular' style='top: 451px;left: 14px;line-height: 1.2;font-size:9px;letter-spacing:-0.1px;'>Based on Verizon Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup><br>online 200 Mbps Internet w/std<br>monthly bill offer as of 12/10/19.</div>");
 amo.registerAttribute("frameText33","TEXT","&nbsp;");
@@ -94,7 +94,7 @@ amo.registerAttribute("frameText41","TEXT","<div style='top: 52px;left: 15px;lin
 amo.registerAttribute("frameText42","TEXT","<div style='top: 92px;left: 15px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Altice Fiber<div style='margin-top: -8px;margin-left: 14px;'>Network</div></div></div>");
 amo.registerAttribute("frameText43","TEXT","<div style='top: 132px;left: 15px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Smart WiFi</div></div><div class='AlticeRegular' style='position: absolute;top: 459px;left: 15px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div>");
 amo.registerAttribute("frameText51", "TEXT", "<div style='top: 56px;left:14px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'><div style='font-size: 75%;color: #0084d6;'>Limited Time Deal!</div></div><div style='top: 13px;left: 16px;line-height:1.1;'><div style='font-size: 22px;letter-spacing: -0.4px;'>400 Mbps Internet</div></div></div>");
-amo.registerAttribute("frameText52", "TEXT", "<div style='top: 117px;left: 13px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>39<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top: -7px;margin-left: 2px;'>mo./3 years<div class='AlticeRegular' style='font-size:10px;margin-top: 2px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top: 117px;left: 13px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>39<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top: -7px;margin-left: 2px;'>mo./1 yr.<div class='AlticeRegular' style='font-size:10px;margin-top: 2px;'>plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>Free Installation</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
