--- a/A/Altice/Altice_January2020/ads/OPT_1P_FIBER_39/728x90/728x90.html
+++ b/A/Altice/Altice_January2020/ads/OPT_1P_FIBER_39/728x90/728x90.html
@@ -80,21 +80,21 @@ amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altic
 amo.registerClick("clickUrl","https://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","728x90_OPT_1P_39_1yr_300Mbps_Img_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","728x90_OPT_1P_39_1yr_300Mbps_Img_Frame03.png");
+amo.registerAttribute("frameImage3","IMAGE","728x90_OPT_1P_39_1yr_300Mbps_Img_Frame03.png");
+amo.registerAttribute("frameImage4","IMAGE","1x1.png");
 amo.registerAttribute("frameImage5","IMAGE","728x90_OPT_1P_39_1yr_300Mbps_Img_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","&nbsp;");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 15px;left:21px;line-height: 1.1;font-size: 22px;'><div style='font-size: 75%;color: #0084d6;letter-spacing: -0.8px;'>Limited Time Deal!</div><div style='letter-spacing: -0.5px;'>400 Mbps<br>Internet</div></div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 9px;left: 178px;line-height:1.1;'><div style='color: #0084d6;font-size: 48px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>39<sup style='font-size: 52%;vertical-align: 58%;'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.5px;position: absolute;top: 46px;left: 1px;width: 150px;'>mo./3 years<div class='AlticeRegular' style='font-size: 9px;margin-top: 0px;margin-left: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 9px;left: 178px;line-height:1.1;'><div style='color: #0084d6;font-size: 48px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>39<sup style='font-size: 52%;vertical-align: 58%;'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.5px;position: absolute;top: 46px;left: 1px;width: 150px;'>mo./1 yr.<div class='AlticeRegular' style='font-size: 9px;margin-top: 0px;margin-left: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 5px;left: 21px;line-height: 1.2;font-size: 16px; letter-spacing:0.5px;'><div style='color: #0084d6;font-size: 24px;'>2x the speed of Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup><br>for <span style='color:#000;'>$10 less/mo.</span></div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 7px;left: 21px;line-height: 1.1;font-size: 16px; letter-spacing:0.5px;'><div style='color: #0084d6;font-size: 24px;'>2x the speed of Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup><br>for <span style='color:#000;'>$10 less/mo.</span></div></div>");
 amo.registerAttribute("frameText32","TEXT","<div class='AlticeRegular' style='top: 61px;left: 21px;line-height: 1.2;font-size:9px;letter-spacing:-0.1px;'>Based on Verizon Fios<sup style='font-size:60%;vertical-align:43%;'>®</sup> online 200 Mbps Internet<br>w/std monthly bill offer as of 12/10/19.</div>");
 amo.registerAttribute("frameText33","TEXT","&nbsp;");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 8px;left: 19px;line-height: 1.6;font-size: 19px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Up to<span  style='color: #0084d6;'> 400 Mbps Internet</span></div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 31px;left: 19px;line-height: 1.6;font-size: 19px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Altice Fiber Network</div></div>");
 amo.registerAttribute("frameText43","TEXT","<div style='top: 53px;left: 19px;line-height: 1.6;font-size: 19px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Smart WiFi</div></div>");
 amo.registerAttribute("frameText51", "TEXT", "<div style='top: 15px;left:21px;line-height: 1.1;font-size: 22px;'><div style='font-size: 75%;color: #0084d6;letter-spacing: -0.8px;'>Limited Time Deal!</div><div style='letter-spacing: -0.5px;'>400 Mbps<br>Internet</div></div>");
-amo.registerAttribute("frameText52", "TEXT", "<div style='top: 9px;left: 178px;line-height:1.1;'><div style='color: #0084d6;font-size: 48px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>39<sup style='font-size: 52%;vertical-align: 58%;'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.5px;position: absolute;top: 46px;left: 1px;width: 150px;'>mo./3 years<div class='AlticeRegular' style='font-size: 9px;margin-top: 0px;margin-left: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top: 9px;left: 178px;line-height:1.1;'><div style='color: #0084d6;font-size: 48px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>39<sup style='font-size: 52%;vertical-align: 58%;'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.5px;position: absolute;top: 46px;left: 1px;width: 150px;'>mo./1 yr.<div class='AlticeRegular' style='font-size: 9px;margin-top: 0px;margin-left: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
 amo.registerAttribute("frameText53", "TEXT", "<div style='top:47px;left:297px;line-height:1.3;font-size:15px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Free<div style='margin-left:14px;margin-top:-4px;'>Installation</div></div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
@@ -192,7 +192,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top:47px;left:297px;li
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
-          // ref: 'ref5.png',
+          // ref: 'ref3.png',
         },
         beforeLoad: function(data){
           data.map(function(content){
